syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.canhtv05.common.grpc";
option java_outer_classname = "AuthProto";

service AuthGrpcService {
  rpc verifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
}
